<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyAeemxy6VpyvNNr9FnIIh2CSXrW0ONi63Y</string>
    <string name="app_name">HesenalMusafer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="terms_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum. </string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="facebook_app_id">329987394276706</string>
    <string name="fb_login_protocol_scheme">fb329987394276706</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">pFwsdRWMN0TONGmfLEwMS47wC</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">XRgV9xtfJv9o1JHEeZnD70GeWAW5YTt0q76PT4CJi8OvisLpla</string>
    <string name="notification">Notifications</string>
    <string name="welcome">Welcome</string>
    <string name="hotel">HOTEL</string>
    <string name="flight">FLIGHT</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="special_packages">SPECIAL PACKAGES</string>
    <string name="car_rental">CAR RENTAL</string>
    <string name="email">Email Address</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_error">Enter valid Email</string>
    <string name="password_error">Enter valid Password</string>
    <string name="password_length_alert">Password should be 6 or more characters long</string>
    <string name="password_different">Old password and new password should be different</string>
    <string name="enter_your_email_address_and_w_ll_send_n_you_a_link_to_rest_you_password">Enter your email address and we\'ll send \n you a link to reset you password.</string>
    <string name="submit">Submit</string>
    <string name="reset_password_message">An email has been sent to your account with password reset link.</string>
    <string name="reset_password_message1">An email has been sent to your account with new password.</string>
    <string name="reset_password_title">Reset</string>
    <string name="ok">Ok</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="signup">Signup</string>
    <string name="confirm_pas_not_match">Confirm Password Not Match</string>
    <string name="please_accept_terms">Please accept terms and conditions</string>
    <string name="profile_pic">Profile Photo</string>
    <string name="how_to_set_profile_pic">How do you want to set your Profile Photo?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="please_select_profile_photo">Please set profile photo</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_your_valuable_feedback_here">Enter your valuable feedback here.</string>
    <string name="contactus">Contact Us</string>
    <string name="feedback_sent">Feedback sent to Administration</string>
    <string name="changepassword">Change Password</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="done">Done</string>
    <string name="pasword_change_sucess">Password changed successfully</string>
    <string name="my_reviews">My Reviews</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_updated_success">Profile updated successfully</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="search">Search</string>
    <string name="booking_history">Booking History</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="specialpackages">Special Packages</string>
    <string name="specialpackage">Special Package</string>
    <string name="roundtrip">Round Trip</string>
    <string name="oneway">One Way</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="travellers">Travellers</string>
    <string name="returntext">Return</string>
    <string name="departure">Departure</string>
    <string name="selectDate">Select Date</string>
    <string name="selectDates">Select Dates</string>
    <string name="adult">Adult</string>
    <string name="childern">Children</string>
    <string name="infant">Infant</string>
    <string name="no_of_travellers">No. Of Travellers</string>
    <string name="stops">Stops</string>
    <string name="airlines">Airlines</string>
    <string name="flight_duration">Flight Duration</string>
    <string name="filter">Filter</string>
    <string name="_10_min">10 Min</string>
    <string name="_30_hrs">30 Hrs</string>
    <string name="_12_00_am">12:00 am</string>
    <string name="_11_59_pm">11:59 pm</string>
    <string name="will_be_implemented_in_beta">Will be implemented in beta</string>
    <string name="total_duaration">Total Duration</string>
    <string name="select_this_flight">Select this Flight</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_flights">Confirm Flights</string>
    <string name="flight_details">Flight Details</string>
    <string name="flight_no">Flight No</string>
    <string name="add_traveller_info">Add Traveler Information</string>
    <string name="click_to_add_info">Click to Add Information</string>
    <string name="add_info">Add Information</string>
    <string name="add">Add</string>
    <string name="add_payment_details">Add Payment Details</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="total_amount">Total Amount</string>
    <string name="edit">Edit</string>
    <string name="middleName">Middle Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">DOB</string>
    <string name="add_infor">Add Information</string>
    <string name="BookingHistory">Booking History</string>
    <string name="total_bil">Total Bill</string>
    <string name="readmore">Read More</string>
    <string name="review">Review</string>
    <string name="enter_your_review_here">Enter Your Review Here...</string>
    <string name="name_email_phone_number"><![CDATA[Name, Email & Phone Number]]></string>
    <string name="package_bok_deatils">Package Booking Details</string>
    <string name="rating">Rating</string>
    <string name="z_to_a">Z to A</string>
    <string name="a_to_z">A to Z</string>
</resources>