<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/roundshapelayout"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="@dimen/x300"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/x10"
        android:gravity="center"
        android:orientation="vertical"
        >

        <com.app.amyal.ui.views.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:gravity="center"
            android:text="@string/reset_password_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:typeface="@string/font_bold" />


        <com.app.amyal.ui.views.AnyTextView1
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x10"
            android:layout_marginBottom="@dimen/x25"
            android:gravity="center"
            android:alpha="0.6"
            android:text="@string/reset_password_message1"
            android:textColor="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />




    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:alpha="0.2"
        android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.app.amyal.ui.views.AnyTextView
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ok"
            android:padding="@dimen/x8"
            android:textColor="@color/c_light_blue"
            android:textSize="20sp"
            app:typeface="@string/font_normal" />

    </LinearLayout>

</LinearLayout>
