<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.app.amyal.ui.views.AnyTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/readmore"
        android:textColor="@color/darkBrown"
        android:textSize="@dimen/x16"
        app:typeface="@string/font_normal" />

    <com.app.amyal.ui.views.AnyTextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x5"
        android:ellipsize="end"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/x15"
        android:alpha="0.2"
        android:background="@color/white"/>


</LinearLayout>