<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llTravelr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/x5">

    <com.app.amyal.ui.views.AnyTextView1
        android:id="@+id/tvGuestDetails"
        app:typeface="@string/font_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/x10"
        android:layout_toStartOf="@+id/btnAddGuest"
        android:alpha="0.6"
        android:ellipsize="marquee"
        android:hint="@string/name_email_phone_number"
        android:singleLine="true"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/x16" />

    <com.app.amyal.ui.views.AnyTextView
        android:id="@+id/btnAddGuest"
        app:typeface="@string/font_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/toggle_selected"
        android:paddingBottom="@dimen/x4"
        android:paddingLeft="@dimen/x20"
        android:paddingRight="@dimen/x20"
        android:paddingTop="@dimen/x4"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/x13" />

</RelativeLayout>