<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/x5"
            android:alpha="0.2"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x30"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:padding="@dimen/x15"
            android:background="@drawable/roundshapelayout"
            android:orientation="vertical">

            <com.app.amyal.ui.views.AnyTextView
                android:id="@+id/tvTitleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:ellipsize="end"
                android:text="@string/package_bok_deatils"
                android:textColor="@color/darkBrown"
                android:textSize="@dimen/x18"
                app:typeface="@string/font_normal" />

            <ListView
                android:id="@+id/lvBooking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"></ListView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x10"
                android:layout_marginBottom="@dimen/x15"
                android:orientation="horizontal">

                <com.app.amyal.ui.views.AnyTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/x16"
                    android:layout_weight="0.3"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:alpha="0.6"
                    android:text="@string/total_bil"
                    app:typeface="@string/font_bold" />

                <com.app.amyal.ui.views.AnyTextView
                    android:id="@+id/tvTotalBill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/x16"
                    android:layout_weight="0.7"
                    android:gravity="right"
                    android:layout_centerVertical="true"
                    android:maxLines="1"
                    android:text="AED 1500.00"
                    android:alpha="0.6"
                    app:typeface="@string/font_bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnBookingHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x25"
            android:layout_marginStart="@dimen/x25"
            android:layout_marginTop="@dimen/x30"
            android:background="@drawable/btn"
            android:text="@string/BookingHistory"
            android:textAllCaps="false"
            android:textSize="@dimen/x18"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x25"
            android:layout_marginStart="@dimen/x25"
            android:layout_marginTop="@dimen/x30"
            android:layout_marginBottom="@dimen/x60"
            android:background="@drawable/btn"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textSize="@dimen/x18"
            android:textColor="@color/white" />

    </LinearLayout>


</ScrollView>