<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/x5"
        android:alpha="0.2"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x30"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:background="@drawable/drawable_square"
        android:orientation="vertical">

        <com.app.amyal.ui.views.AnyEditTextView
            android:id="@+id/edtFeedBack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x250"
            android:alpha="0.7"
            android:background="@color/transparent"
            android:gravity="left"
            android:layout_gravity="left"
            android:hint="@string/enter_your_valuable_feedback_here"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="@dimen/x15"
            android:singleLine="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/x16"
            app:typeface="@string/font_normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x25"
        android:layout_marginStart="@dimen/x25"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/btn"
        android:text="@string/submit"
        android:textSize="@dimen/x18"
        android:textAllCaps="false"
        android:textColor="@color/white" />



</LinearLayout>