<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/x20"
            android:layout_marginTop="@dimen/x30"
            android:src="@drawable/logo" />

        <com.app.amyal.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/x15"
            android:layout_marginLeft="@dimen/x25"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:layout_marginRight="@dimen/x25"
            android:text="@string/enter_your_email_address_and_w_ll_send_n_you_a_link_to_rest_you_password"
            android:textColor="@color/white"
            android:textSize="@dimen/x15"
            app:typeface="@string/font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x35"
            android:layout_marginStart="@dimen/x35"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/x25"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/x10"
                android:src="@drawable/email" />

            <com.app.amyal.ui.views.AnyEditTextView
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:alpha="0.7"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/x15"
                app:typeface="@string/font_normal" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginEnd="@dimen/x35"
            android:layout_marginStart="@dimen/x35"
            android:layout_marginTop="@dimen/x4"
            android:background="@color/white" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/x35"
            android:layout_marginStart="@dimen/x35"
            android:layout_marginTop="@dimen/x30"
            android:background="@drawable/btn"
            android:text="@string/submit"
            android:textSize="@dimen/x18"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</ScrollView>